--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.5.0
+dj-database-url==0.5.0
 Django==4.0.4
 django-ckeditor==6.3.2
 django-js-asset==2.0.0
+gunicorn==20.1.0
 Pillow==9.1.0
 sqlparse==0.4.2
 tzdata==2022.1
+whitenoise==6.1.0
+psycopg2-binary==2.9.3
