--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,16 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+asgiref = "==3.5.0"
+dj-database-url = "==0.5.0"
+django = "==4.0.4"
+django-ckeditor = "==6.3.2"
+django-js-asset = "==2.0.0"
+gunicorn = "==20.1.0"
+pillow = "==9.1.0"
+sqlparse = "==0.4.2"
+tzdata = "==2022.1"
+whitenoise = "==6.1.0"
 
 [requires]
 python_version = "3.9"
