--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ sqlparse==0.4.2
 tzdata==2022.1
 whitenoise==6.1.0
 psycopg2-binary==2.9.3
+
+
+
+
+# How I solved [pipenv lock] errors
+#  - Reinstalling pipenv did the trick
